# fyp

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  check_proofs.sh  commutativity_add.bwlang  test.json
.github/workflows/: cargo_ci.yaml  cargo_test.yml
alive_bench/: .gitignore  README.md  filter_queries.py  get_artifact_json.sh  parse_artifact_results.py  parse_smt.py  requirements.txt
benchmarks/alive_arith/: AddSub_1164.bwlang  AddSub_1165.bwlang  AddSub_1176.bwlang  AddSub_1539_2.bwlang  AddSub_1574.bwlang  (+10 more)
gen_graphs/: bitwise_no_lemma.json  gen_data.sh  get_timing.sh  graph.ipynb  lemma_out.json  no_lemma_out.json  parse_mirabelle.py  process_alive.ipynb
proof-test/: AndOrXor_1207_values_0.thy  ROOT  bitwise_lemmas.thy  mixed_lemmas.thy  signed_lemmas.thy
proofs/: #WordExamples.thy#  #sufficient_conditions.thy#  ROOT  WordExamples.thy  arith_lemmas.thy  bitwise_lemmas.thy  manual_rewrite.thy  mixed_lemmas.thy  rewrite_defs.thy  rewrite_lemmas.thy  signed_lemmas.thy  simp_rewrite_lemmas.thy  sufficient_conditions.thy  test.thy  testproofs.thy
scripts/: generate_lemma_map.py  parabit_runner.py  pyproject.toml
src/: dot_equiv.rs  extractor.rs  generated_matcher.rs  language.rs  lib.rs  main.rs  param_ir.rs  rewrite_rules.rs  types.rs  utils.rs
test_data/: alive.json  alive_arith.json  alive_bitwise.json  alive_mixed.json  bitvector_arith.json  bitvector_shifts.json  bitwise_test.json  rover.json  rover_1.json
tests/: alive.rs  alive_arith.rs  alive_bitwise.rs  alive_mixed.rs  bitvector_arith.rs  bitvector_shifts.rs  common.rs  rover.rs
(+132 files in other folders)
