[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "*"
egg = { version = "0.10.0", features = ["serde-1", "serde_json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
skip_isabelle = []
