[package]
name = "para_bit"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "*"
egg = { version = "0.10.0", features = ["serde-1", "serde_json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
tqdm = "0.7.0"
regex = "1.11.1"
ntest = "0.9.3"
dhat = "0.3.3"
itertools = "0.14.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
isabelle-check = []
get-heap-info = []
